[package]
name = "vrawtex"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
image = "0.25.9"
minifb = "0.28.0"
rayon = "1.11.0"
walkdir = "2.5.0"
zstd = { version = "0.13.3", features = ["zstdmt"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
debug = false
panic = "abort"
